# octans

./: .gitignore  README.md  g.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini  tst.py
docs/: octans.dia  portal.ipynb  sky.ipynb  xlightcurve.ipynb
examples/: oc.ipynb
gui/: about.py  about.ui  add_flux.py  add_flux.ui  add_time.py  add_time.ui  b_spline.py  b_spline.ui  butterworth_filter.py  butterworth_filter.ui  file_loader.py  file_loader.ui  fold_periodogram.py  fold_periodogram.ui  fold_phase.py  fold_phase.ui  graph.py  graph.ui  hjd.py  hjd.ui  main.py  main.ui  minimum.py  minimum.ui  savgol_filter.py  savgol_filter.ui  savitzky_golay.py  savitzky_golay.ui  smooth_b_spline.py  smooth_b_spline.ui  time_travel.py  time_travel.ui
src/octans/: __init__.py  boundaries.py  catalgues.py  catalogues.py  errors.py  kvw.py  lc.py  lc_model.py  minima.py  model_catalgues.py  model_catalogues.py  model_portal.py  model_sky.py  models.py  oc.py  portal.py  rotse.py  sky.py  utils.py
tests/: test_exoplanet_eu.py  test_nasa_exoplant_archive.py  test_period.py  test_portal.py  test_sky.py  test_xlightcurve.py
