[metadata]
name = octans
description = Observed CalculaTed diagrAm aNd lightcurveS
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1 Beta
author = Mohammad S.Niaei
author_email = m.shemuni@gmail.com
keywords = Observed-Calculated, Lightcurve
license = GNU/GPL V3
license_files = LICENSE
url = https://github.com/mshemuni/octans/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
packages =
    octans
install_requires =
    astropy
    astroquery
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
octans =
    py.typed

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401